更新一下格式

--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -28,325 +28,298 @@
 
 ## 一面
 
-### css 盒模型
+1. css 盒模型
 
-### css 居中垂直对齐
+2. css 居中垂直对齐
 
-### box-sizing 的用法
+3. box-sizing 的用法
 
-### 点击按钮使得页面上的文字颜色发生改变如何实现
+4. 点击按钮使得页面上的文字颜色发生改变如何实现
 
-### 闭包 闭包的使用场景 缺点
+5. 闭包 闭包的使用场景 缺点
 
-### 事件冒泡，如何阻止事件冒泡
+6. 事件冒泡，如何阻止事件冒泡
 
-### 事件循环 promise 跟 setTimeout 哪个先执行
+7. 事件循环 promise 跟 setTimeout 哪个先执行
 
-### 知道哪些 ES6 的东西 如何解决 ES6 的语法兼容
+8. 知道哪些 ES6 的东西 如何解决 ES6 的语法兼容
 
-### ES6 this
+9. ES6 this
 
-### ES6 let 的用法，var let 的区别
+10. ES6 let 的用法，var let 的区别
 
-### vue 知不知道 vuex vue-router 的使用
+11. vue 知不知道 vuex vue-router 的使用
 
-### vue 中数组的添加没效果是什么问题
+12. vue 中数组的添加没效果是什么问题
 
-### 问了一下实习时间
+13. 问了一下实习时间
 
-### 未来的规划
+14. 未来的规划
 
-### 你有什么想问我的
+15. 你有什么想问我的
 
 # 华为 消费者 BG 软件部
 
 ## 一面 2020/4/22
 
-### 手撕代码：找出数组中重复的数字；要求不能开辟新空间；时间复杂度小于 O(N^2)
+1. 手撕代码：找出数组中重复的数字；要求不能开辟新空间；时间复杂度小于 O(N^2)
 
-```js
-// 先快排再遍历
-function quickSort(array, L = 0, R = array.length - 1) {
-  if (L >= R) return
-  var id = L
-  var i = L
-  var j = R
-  var base = array[L]
-  while (i < j) {
-    while (i < j && array[j] >= base) {
-      j--
+    ```js
+    // 先快排再遍历
+    function quickSort(array, L = 0, R = array.length - 1) {
+      if (L >= R) return
+      var id = L
+      var i = L
+      var j = R
+      var base = array[L]
+      while (i < j) {
+        while (i < j && array[j] >= base) {
+          j--
+        }
+        while (i < j && array[i] <= base) {
+          i++
+        }
+        ;[array[i], array[j]] = [array[j], array[i]]
+      }
+      ;[array[id], array[i]] = [array[i], array[id]]
+      quickSort(array, L, i - 1)
+      quickSort(array, i + 1, R)
+      return array
     }
-    while (i < j && array[i] <= base) {
-      i++
+
+    function findNum(nums) {
+      quickSort(nums, 0, nums.length - 1)
+      for (let i = 0; i < nums.length - 1; i++) {
+        if (nums[i] === nums[i + 1]) {
+          return nums[i]
+        }
+      }
     }
-    ;[array[i], array[j]] = [array[j], array[i]]
-  }
-  ;[array[id], array[i]] = [array[i], array[id]]
-  quickSort(array, L, i - 1)
-  quickSort(array, i + 1, R)
-  return array
-}
+    console.log(findNum([2, 4, 3, 1, 3, 5, 6, 3]))
+    ```
 
-function findNum(nums) {
-  quickSort(nums, 0, nums.length - 1)
-  for (let i = 0; i < nums.length - 1; i++) {
-    if (nums[i] === nums[i + 1]) {
-      return nums[i]
-    }
-  }
-}
-console.log(findNum([2, 4, 3, 1, 3, 5, 6, 3]))
-```
+2. hash 原理
 
-### hash 原理
+3. DP 思想
 
-### DP 思想
+4. 知道哪些数据结构
 
-### 知道哪些数据结构
+5. 学过 python，用 python 做了什么
 
-### 学过 python，用 python 做了什么
+6. 这些前端技术栈是课程学习的还是自学的
 
-### 这些前端技术栈是课程学习的还是自学的
-
-### 在实验室做了什么？收获是什么
+7. 在实验室做了什么？收获是什么
 
 ## 二面 2020/5/13 40min
 
-### 自我介绍
+1. 自我介绍
 
-### 前端项目是导师的要求吗
+2. 前端项目是导师的要求吗
 
-### 讨论论文、专利
+3. 讨论论文、专利
 
-### 论文在实际应用中的实现难度在哪里
+4. 论文在实际应用中的实现难度在哪里
 
-### 职业规划
+5. 职业规划
 
-### 你学的专业华为也有对口的岗位，交换机之类的，为什么要走软件开发
+6. 你学的专业华为也有对口的岗位，交换机之类的，为什么要走软件开发
 
-### 你走软件工程方向的你大学所学的电子信息专业的东西就都白费了
+7. 你走软件工程方向的你大学所学的电子信息专业的东西就都白费了
 
-### 你对 JAVA/C/C++有用过吗
+8. 你对 JAVA/C/C++有用过吗
 
-### 企业中没有专门用前端语言来写的项目怎么办？（你愿不愿意转方向）
+9. 企业中没有专门用前端语言来写的项目怎么办？（你愿不愿意转方向）
 
-### 实习时间
+10. 实习时间
 
 # 美团 到店事业群-平台技术部
 
 ## 美团一面 40min
 
-### doctype 的作用
+1. doctype 的作用
+    声明版本，第一题就答错了，我答的是用来区分是标准模式还是混杂模式。。。
+2. 语义化标签的理解
+    说是与计算机编译也有关系!!!
+3. css 选择器优先级
 
-声明版本，第一题就答错了，我答的是用来区分是标准模式还是混杂模式。。。
+4. important 有什么不好
+    有时候程序员忘了删除
+5. css 选择器的解析顺序
+    从右往左
+6. css 清除浮动
 
-### 语义化标签的理解
+7. overflow:hidden 是怎么清除浮动的
 
-说是与计算机编译也有关系!!!
+8. 浏览器的同源政策
 
-### css 选择器优先级
+9. 浏览器如何跨域
+    通过 jsonp，（我还说了通过 webSocket 协议跨域，但是面试官说是错的）
 
-### important 有什么不好
+    ```js
+    JSONP：通过动态创建script，再请求一个带参网址实现跨域通信。document.domain + iframe跨域：两个页面都通过js强制设置document.domain为基础主域，就实现了同域。
+    location.hash + iframe跨域：a欲与b跨域相互通信，通过中间页c来实现。 三个页面，不同域之间利用iframe的location.hash传值，相同域之间直接js访问来通信。
 
-有时候程序员忘了删除
+    window.name + iframe跨域：通过iframe的src属性由外域转向本地域，跨域数据即由iframe的window.name从外域传递到本地域。
 
-### css 选择器的解析顺序（从右往左）
+    postMessage跨域：可以跨域操作的window属性之一。
 
-比如 是先从右往
+    CORS：服务端设置Access-Control-Allow-Origin即可，前端无须设置，若要带cookie请求，前后端都需要设置。
 
-```html
-p span { color: #ccc; }
-<p>
-  <span></span>
-</p>
-```
+    代理跨域：启一个代理服务器，实现数据的转发
+    ```
 
-### css 清除浮动
+10. get 和 post 的区别
 
-### overflow:hidden 是怎么清除浮动的
+11. 说说你知道的状态码
 
-### 浏览器的同源政策
+12. js 的浮点数问题
 
-### 浏览器如何跨域
+    ```js
+    toFixed(n)方法也会存在进度问题
 
-通过 jsonp，（我还说了通过 webSocket 协议跨域，但是面试官说是错的）
+    将两个小数先转化为整数将其做运算，再转换为小数
 
-```js
-JSONP：通过动态创建script，再请求一个带参网址实现跨域通信。document.domain + iframe跨域：两个页面都通过js强制设置document.domain为基础主域，就实现了同域。
-location.hash + iframe跨域：a欲与b跨域相互通信，通过中间页c来实现。 三个页面，不同域之间利用iframe的location.hash传值，相同域之间直接js访问来通信。
+    直接用第三方处理浮点数的库，帮你封装好，引入直接可以用。 如：number-precision
+    ```
 
-window.name + iframe跨域：通过iframe的src属性由外域转向本地域，跨域数据即由iframe的window.name从外域传递到本地域。
+13. js 脚本 defer 和 async 的区别
+    async 是异步下载并立即执行，然后文档继续解析，defer 是异步加载后解析文档，然后再执行脚本
+14. 异步 js 脚本在执行的时候主线程会停止吗
 
-postMessage跨域：可以跨域操作的window属性之一。
+15. 任务队列中有哪两种？讲讲是怎么执行的
 
-CORS：服务端设置Access-Control-Allow-Origin即可，前端无须设置，若要带cookie请求，前后端都需要设置。
+16. js 如何设置异步
+    我答的是 promise 和 async/await，面试官补充了一个最基本的，通过 setTimeout 注册回调函数，举了个例子：对一个元素点击，想要延迟执行呢？我说通过对这个事件监听，注册一个回调函数，在回调函数里设置 setTimeout
 
-代理跨域：启一个代理服务器，实现数据的转发
-```
+17. async/await 是一个语法糖，你知道 await 后面如何用吗
 
-### get 和 post 的区别
+18. js 的 this 指向问题
 
-### 说说你知道的状态码
+19. this 在 node 里全局的指向是什么
+    golbal
+20. 对象的深拷贝和浅拷贝
 
-### js 的浮点数问题
+21. 数组去重的办法
 
-toFixed(n)方法也会存在进度问题
+22. git rebase 和 git merge 的区别
 
-将两个小数先转化为整数将其做运算，再转换为小数
+    ```js
+    假设有3次提交A,B,C。
 
-直接用第三方处理浮点数的库，帮你封装好，引入直接可以用。 如：number-precision
+    在远程分支origin的基础上创建一个名为"mywork"的分支并提交了，同时有其他人在"origin"上做了一些修改并提交了。
 
-### js 脚本 defer 和 async 的区别
+    其实这个时候E不应该提交，因为提交后会发生冲突。如何解决这些冲突呢？有以下两种方法：
 
-async 是异步下载并立即执行，然后文档继续解析，defer 是异步加载后解析文档，然后再执行脚本
+    1、git merge
+    用git pull命令把"origin"分支上的修改pull下来与本地提交合并（merge）成版本M，但这样会形成图中的菱形，让人很困惑。
 
-### 异步 js 脚本在执行的时候主线程会停止吗
+    2、git rebase
+    创建一个新的提交R，R的文件内容和上面M的一样，但我们将E提交废除，当它不存在（图中用虚线表示）。由于这种删除，小李不应该push其他的repository.rebase的好处是避免了菱形的产生，保持提交曲线为直线，让大家易于理解。
 
-### 任务队列中有哪两种？讲讲是怎么执行的
+    在rebase的过程中，有时也会有conflict，这时Git会停止rebase并让用户去解决冲突，解决完冲突后，用git add命令去更新这些内容，然后不用执行git-commit,直接执行git rebase --continue,这样git会继续apply余下的补丁。
+    在任何时候，都可以用git rebase --abort参数来终止rebase的行动，并且mywork分支会回到rebase开始前的状态。
+    ```
 
-### js 如何设置异步
+23. vue 项目用了哪些技术
 
-我答的是 promise 和 async/await，面试官补充了一个最基本的，通过 setTimeout 注册回调函数，举了个例子：对一个元素点击，想要延迟执行呢？我说通过对这个事件监听，注册一个回调函数，在回调函数里设置 setTimeout
+24. webpack 的 css 加载器和你用的 stylus 的 css 有什么不同
 
-### async/await 是一个语法糖，你知道 await 后面如何用吗
+25. 为什么要用 vue 来写呢？为什么不用原生的 js 来写
 
-### js 的 this 指向问题
+26. 为什么要用 vuex
 
-### this 在 node 里全局的指向是什么
+27. 有没有了解一些前端前沿的技术
+    回答无，只知道 vue 和 react，你给我讲几个，然后说了 vscode 跨终端框架，web assembly
 
-golbal
-
-### 对象的深拷贝和浅拷贝
-
-### 数组去重的办法
-
-### git rebase 和 git merge 的区别
-
-```js
-假设有3次提交A,B,C。
-
-在远程分支origin的基础上创建一个名为"mywork"的分支并提交了，同时有其他人在"origin"上做了一些修改并提交了。
-
-其实这个时候E不应该提交，因为提交后会发生冲突。如何解决这些冲突呢？有以下两种方法：
-
-1、git merge
-用git pull命令把"origin"分支上的修改pull下来与本地提交合并（merge）成版本M，但这样会形成图中的菱形，让人很困惑。
-
-2、git rebase
-创建一个新的提交R，R的文件内容和上面M的一样，但我们将E提交废除，当它不存在（图中用虚线表示）。由于这种删除，小李不应该push其他的repository.rebase的好处是避免了菱形的产生，保持提交曲线为直线，让大家易于理解。
-
-在rebase的过程中，有时也会有conflict，这时Git会停止rebase并让用户去解决冲突，解决完冲突后，用git add命令去更新这些内容，然后不用执行git-commit,直接执行git rebase --continue,这样git会继续apply余下的补丁。
-在任何时候，都可以用git rebase --abort参数来终止rebase的行动，并且mywork分支会回到rebase开始前的状态。
-```
-
-### vue 项目用了哪些技术
-
-### webpack 的 css 加载器和你用的 stylus 的 css 有什么不同
-
-### 为什么要用 vue 来写呢？为什么不用原生的 js 来写
-
-### 为什么要用 vuex
-
-### 有没有了解一些前端前沿的技术
-
-回答无，只知道 vue 和 react，你给我讲几个，然后说了 vscode 跨终端框架，web assembly
-
-### 什么时候开始学前端的
+28. 什么时候开始学前端的
 
 ## 二面 2020/5/12 45min
 
-### 项目介绍
+1. 项目介绍
 
-### 项目你觉得比较难的地方
+2. 项目你觉得比较难的地方
 
-### 城市选择页面是怎么实现的
+3. 城市选择页面是怎么实现的
 
-### 城市列表的数据是从哪来的
+4. 城市列表的数据是从哪来的
 
-### 移动端布局的怎么实现的
+5. 移动端布局的怎么实现的
 
-### 移动端 200ms 延迟的原因，如何解决
+6. 移动端 200ms 延迟的原因，如何解决
 
-回答 fastclick 库
+    回答 fastclick 库
 
-### fastclick 库是怎么实现的
+7. fastclick 库是怎么实现的
 
-在检测到 touchend 事件的时候，会通过 DOM 自定义事件立即出发模拟一个 click 事件，并把浏览器在 300ms 之后真正的 click 事件阻止掉
+    在检测到 touchend 事件的时候，会通过 DOM 自定义事件立即出发模拟一个 click 事件，并把浏览器在 300ms 之后真正的 click 事件阻止掉
 
-### 如何阻止真正的 click 事件
+8. 如何阻止真正的 click 事件
 
-### 事件流有哪些阶段
+9. 事件流有哪些阶段
 
-### 捕获阶段可以应用在哪儿
+10. 捕获阶段可以应用在哪儿
 
-### 监听事件的方式
+11. 监听事件的方式
 
-### addEventListener 的参数有哪些
+12. addEventListener 的参数有哪些
 
-### 浏览器缓存，怎么判断是否从缓存中取
+13. 浏览器缓存，怎么判断是否从缓存中取
 
-### 地址栏输入 URL 后经历了哪些步骤
+14. 地址栏输入 URL 后经历了哪些步骤
 
-### 区分 '123' 和 123 的方法
+15. 区分 '123' 和 123 的方法
 
-### flex 有哪些属性
+16. flex 有哪些属性
 
-### flex-basis 属性是干嘛的
+17. flex-basis 属性是干嘛的
 
-### vue 双向数据绑定，哪些不能双向绑定
+18. vue 双向数据绑定，哪些不能双向绑定
 
-数组的下标方式，因为 vue2 里面是用的 Object.defineProperty() 方法
-可以通过 vue3 proxy 方式
+    数组的下标方式，因为 vue2 里面是用的 Object.defineProperty() 方法
+    可以通过 vue3 proxy 方式
 
-### Object.defineProperty 是干嘛的，参数有哪些
+19. Object.defineProperty 是干嘛的，参数有哪些
 
-### vue3 相对于 vue2 的区别
+20. vue3 相对于 vue2 的区别
 
-proxy，并且 proxy 不能向下兼容(回答有点问题)
+    proxy，并且 proxy 不能向下兼容(回答有点问题)
 
-### 怎么样向下兼容
+21. 怎么样向下兼容
 
-babel
+    babel
 
-### `import {A} from '...'` `import A from '...'` `require('...')`的区别
+22. `import {A} from '...'` `import A from '...'` `require('...')`的区别
 
-### 项目用什么打包的
+23. 项目用什么打包的
 
-webpack
+24. webpack 的功能
 
-### webpack 的功能
+25. 手撕代码：1203040506 --> 1234560000 （移动 0 到最后）
 
-### 手撕代码：1203040506 --> 1234560000 （移动 0 到最后）
+26. 实现 find(numbers, n, sum)的方法：在 numbers 数组中找到 n 个数的和为 sum，讲讲思路
 
-### 实现 find(numbers, n, sum)的方法：在 numbers 数组中找到 n 个数的和为 sum，讲讲思路
+    ```js
+    我回答的是：
+    n=2的时候，就是在数组中找到两个数的和为sum，这个很简单
+    n=3的时候，可以遍历数组，先拿出一个数num，剩下的数组成一个数组，在剩下的数组中寻找两个数的和为sum-num，这就回到了n=2的情况
+    n>3的时候依次类推
+    ```
 
-```js
-我回答的是：
-n=2的时候，就是在数组中找到两个数的和为sum，这个很简单
-n=3的时候，可以遍历数组，先拿出一个数num，剩下的数组成一个数组，在剩下的数组中寻找两个数的和为sum-num，这就回到了n=2的情况
-n>3的时候依次类推
-```
+27. 你用过 python，那你说说在处理数据（比如 excel 表格数据）的时候 python 好还是 js 好
+28. nodejs 是什么
+    nodejs 也可以读取 excel 数据，推荐可以了解一下
+29. 了解哪些新技术
+    Web Assembly
+30. web assembly 是个什么 (框架?语言?规范？)
 
-### 你用过 python，那你说说在处理数据（比如 excel 表格数据）的时候 python 好还是 js 好
+    官网定义：
 
-### nodejs 是什么
+    - WebAssembly/wasm WebAssembly 或者 wasm 是一个可移植、体积小、加载快并且兼容 Web 的全新格式
+    - WebAssembly 是由主流浏览器厂商组成的 W3C 社区团体 制定的一个新的规范。
 
-nodejs 也可以读取 excel 数据，推荐可以了解一下
+    简书：
 
-### 了解哪些新技术
-
-Web Assembly
-
-### web assembly 是个什么 (框架?语言?规范？)
-
-官网定义：
-
-- WebAssembly/wasm WebAssembly 或者 wasm 是一个可移植、体积小、加载快并且兼容 Web 的全新格式
-- WebAssembly 是由主流浏览器厂商组成的 W3C 社区团体 制定的一个新的规范。
-
-简书：
-
-- WebAssembly 是一种可以使用非 JavaScript 编程语言编写代码并且能在浏览器上运行的技术方案。
+    - WebAssembly 是一种可以使用非 JavaScript 编程语言编写代码并且能在浏览器上运行的技术方案。
 
 ---
 
@@ -354,462 +327,354 @@ Web Assembly
 
 ## 一面 2020/5/11 45min
 
-### H5 和 C3 的新特性
+1. H5 和 C3 的新特性
 
-### 例举 3 个你最不常用的 css 特性
+2. 例举 3 个你最不常用的 css 特性
 
-### 什么是变量提升？如何避免变量提升？如何禁止变量提升
+3. 什么是变量提升？如何避免变量提升？如何禁止变量提升
 
-### 什么是浅拷贝？简单的浅拷贝如何实现
+4. 什么是浅拷贝？简单的浅拷贝如何实现
 
-### ES6 有没有新增什么简单的方法浅拷贝
+5. ES6 有没有新增什么简单的方法浅拷贝
+   - {...obj}
+   - Object.assign({}, obj)
 
-- {...obj}
-- Object.assign({}, obj)
+6. 怎么实现一个简单类型的深拷贝，一行代码
 
-### 怎么实现一个简单类型的深拷贝，一行代码
+    ```js
+    let newObj = JSON.parse(JSON.stringify(oldObj))
+    ```
 
-```js
-let newObj = JSON.parse(JSON.stringify(oldObj))
-```
+7. 跨域知道哪几种
 
-### 跨域知道哪几种
+8. 你用过哪种?(JSONP) JSONP 的回调函数需要定义在什么地方
 
-### 你用过哪种?(JSONP) JSONP 的回调函数需要定义在什么地方
+9. 浏览器存储你知道哪些
 
-### 浏览器存储你知道哪些
+10. cookie 和 webStorage 的区别
 
-### cookie 和 webStorage 的区别
+11. cookie 是每次请求都会携带吗？怎么设置不携带 cookie
 
-### cookie 是每次请求都会携带吗？怎么设置不携带 cookie
+    满足某种条件才会不携带，然后设置某种参数才能携带
 
-满足某种条件才会不携带，然后设置某种参数才能携带
+12. 某种请求默认不携带 cookie
 
-### 某种请求默认不携带 cookie
+    fetch 请求默认不携带 cookie
 
-fetch 请求默认不携带 cookie
+    ```js
+    fetch在默认情况下, 不管是同域还是跨域ajax请求都不会带上cookie, 只有当设置了 credentials 时才会带上该ajax请求所在域的cookie, 服务端需要设置响应头 Access-Control-Allow-Credentials: true, 否则浏览器会因为安全限制而报错, 拿不到响应
+    ```
 
-```js
-fetch在默认情况下, 不管是同域还是跨域ajax请求都不会带上cookie, 只有当设置了 credentials 时才会带上该ajax请求所在域的cookie, 服务端需要设置响应头 Access-Control-Allow-Credentials: true, 否则浏览器会因为安全限制而报错, 拿不到响应
-```
+13. vue-router 里面有两种路由模式是什么，区别是什么
 
-### vue-router 里面有两种路由模式是什么，区别是什么
+    hash 模式 和 history 模式
 
-hash 模式 和 history 模式
+    最大的区别：
 
-最大的区别：
+    hash 模式不会把路径的变化发送到后端（hash 值变化不会导致浏览器向服务器发出请求）， 而 history 模式会
 
-hash 模式不会把路径的变化发送到后端（hash 值变化不会导致浏览器向服务器发出请求）， 而 history 模式会
+14. 了解 SEO 吗？要做 SEO 的话要用哪种路由模式
 
-### 了解 SEO 吗？要做 SEO 的话要用哪种路由模式
+    history 模式
 
-history 模式
+15. vue 里的 nextTick 有什么作用
 
-### vue 里的 nextTick 有什么作用
+16. vue 哪些对数据的操作不是响应式的
 
-### vue 哪些对数据的操作不是响应式的
+    通过索引值修改数组中的元素 （虽然 data 被更改，但是 View 层不会发生变化
+    可通过数组中的方法进行改变，或则使用 Vue 的 api： set()
 
-通过索引值修改数组中的元素 （虽然 data 被更改，但是 View 层不会发生变化
-可通过数组中的方法进行改变，或则使用 Vue 的 api： set()
+    扯到了 vue3.0 的 proxy 方法
 
-扯到了 vue3.0 的 proxy 方法
+17. vue3 现在是个什么状态？ 为什么不发布正式版本
 
-### vue3 现在是个什么状态？ 为什么不发布正式版本
-
-目前浏览器的生态还不足以支持 vue3，目前浏览器还不支持 vue3，再等待浏览器的升级。
+    目前浏览器的生态还不足以支持 vue3，目前浏览器还不支持 vue3，再等待浏览器的升级。
 
 ## 二面 2020/5/13 50min
 
-### 通用的自我介绍
+1. 通用的自我介绍
 
-### 项目
+2. 项目
 
-### rem 和 em 的区别
+3. rem 和 em 的区别
 
-### 项目城市切换是如何实现的
+4. 项目城市切换是如何实现的
 
-### vuex 是什么？主要功能呢
+5. vuex 是什么？主要功能呢
 
-### 浏览器缓存的过程
+6. 浏览器缓存的过程
 
-在浏览器第一次发起请求时，本地无缓存，向 web 服务器发送请求，服务器起端响应请求，浏览器端缓存。在第一次请求时，服务器会将页面最后修改时间通过 Last-Modified 标识由服务器发送给客户端，客户端记录修改时间；服务器还会生成一个 Etag，并发送给客户端。
+7. 服务器一定会将 Etag 发送给浏览器吗
 
-- 浏览器请求某一资源时，会先获取该资源缓存的 header 信息，然后根据 header 中的 Cache-Control 和 Expires 来判断是否过期。若没过期则直接从缓存中获取资源信息，包括缓存的 header 的信息，所以此次请求不会与服务器进行通信。这里判断是否过期，则是强缓存相关。
-- 如果显示已过期，浏览器会向服务器端发送请求，这个请求会携带第一次请求返回的有关缓存的 header 字段信息，比如客户端会通过 If-None-Match 头将先前服务器端发送过来的 Etag 发送给服务器，服务会对比这个客户端发过来的 Etag 是否与服务器的相同，若相同，就将 If-None-Match 的值设为 false，返回状态 304，客户端继续使用本地缓存，不解析服务器端发回来的数据，若不相同就将 If-None-Match 的值设为 true，返回状态为 200，客户端重新请求服务器端返回的数据；客户端还会通过 If-Modified-Since 头将先前服务器端发过来的最后修改时间戳发送给服务器，服务器端通过这个时间戳判断客户端的页面是否是最新的，如果不是最新的，则返回最新的内容，如果是最新的，则返回 304，客户端继续使用本地缓存。
+8. Etag 和 If-Modified-Since 的区别在哪
 
-### 服务器一定会将 Etag 发送给浏览器吗
+9. 禁用缓存的方式
 
-### Etag 和 If-Modified-Since 的区别在哪
+10. cookie 跟 localStorage 的区别
 
-### 禁用缓存的方式
+11. localStorage 会传到服务器端吗？cookie 会传到服务器端吗
 
-### cookie 跟 localStorage 的区别
+12. 服务器端能否修改 cookie
 
-### localStorage 会传到服务器端吗？cookie 会传到服务器端吗
+    服务器端操作 Cookie,主要注意会使用以下三个类:
+    HttpCookie,HttpResponse,HttpRequest
 
-### 服务器端能否修改 cookie
+13. 闭包
 
-服务器端操作 Cookie,主要注意会使用以下三个类:
-HttpCookie,HttpResponse,HttpRequest
+    问这是个闭包吗？
 
-### 闭包
+    ```js
+    function a() {
+      const num = 123
+      function b() {
+        console.log(num)
+      }
+      b()
+    }
+    ```
 
-问这是个闭包吗？
+14. reduce 方法了解吗？怎么用的
 
-```js
-function a() {
-  const num = 123
-  function b() {
-    console.log(num)
-  }
-  b()
-}
-```
+15. map 方法了解吗？怎么用的
 
-### reduce 方法了解吗？怎么用的
+16. promise 的 then 方法返回的是什么
 
-### map 方法了解吗？怎么用的
+17. 如何在控制台获取页面上所有的事件对象
 
-### promise 的 then 方法返回的是什么
+    ```js
+    e = event || window.event
+    ```
 
-### 如何在控制台获取页面上所有的事件对象
+18. 控制台可以显示页面需要的静态资源吗？在哪显示
 
-```js
-e = event || window.event
-```
+    控制台 Network 里
 
-### 控制台可以显示页面需要的静态资源吗？在哪显示
-
-控制台 Network 里
-
-### 学前端碰到问题是怎么解决
+19. 学前端碰到问题是怎么解决
 
 ## 三面 2020/5/18 50min
 
-### 常规，自我介绍
+1. 常规，自我介绍
 
-### 你科研用的是机器学习这块儿的东西，为什么不走这个方向
+2. 你科研用的是机器学习这块儿的东西，为什么不走这个方向
 
-### 介绍项目
+3. 介绍项目
 
-### 项目用了什么技术
+4. 项目用了什么技术
 
-### css 定位 absolute 和 fixed 的区别
+5. css 定位 absolute 和 fixed 的区别
 
-### 父子组建传值
+6. 父子组建传值
 
-### vuex
+7. vuex
 
-### vue底层原理
+8. vue底层原理
 
-### vue-router两种路由模式？区别
+9. vue-router两种路由模式？区别
 
-### webpack原理
+10. webpack原理
 
-### webpack优化，比如 npm run build 很慢怎么解决
+11. webpack优化，比如 npm run build 很慢怎么解决
 
-### 遇到问题怎么解决
+12. 遇到问题怎么解决
 
-### 给你一项任务限期内完成，你会怎么安排
+13. 给你一项任务限期内完成，你会怎么安排
 
 ## hr面 2020/5/20  30min
 
-### 实习时间是什么样子的
+1. 实习时间是什么样子的
 
-### 玩过什么游戏
+2. 玩过什么游戏
 
-### 游戏最高玩到什么样的级别
+3. 游戏最高玩到什么样的级别
 
-### 现在为什么玩的少
+4. 现在为什么玩的少
 
-### 现在为什么想做游戏的web开发
+5. 现在为什么想做游戏的web开发
 
-### 对游戏端web开发了解多少
+6. 对游戏端web开发了解多少
 
-### 学习了什么框架
+7. 学习了什么框架
 
-### 讲讲你最出彩的项目
+8. 讲讲你最出彩的项目
 
-### 为什么做这个项目
+9. 为什么做这个项目
 
-### 项目遇到的难点
+10. 项目遇到的难点
 
-### 项目的成果
+11. 项目的成果
 
-### 个人博客的进展是什么样子？搭博客的目的是什么
+12. 个人博客的进展是什么样子？搭博客的目的是什么
 
-### 校学生会做了什么 碰到什么难点 怎么解决 组织活动的频率
+13. 校学生会做了什么 碰到什么难点 怎么解决 组织活动的频率
 
-### 有拿到其他哪家的offer
+14. 有拿到其他哪家的offer
 
-### 未来是打算呆在杭州
+15. 未来是打算呆在杭州
 
 # 学而思
 
 ## 一面 学而思网校 2020/5/15 67min
 
-### 基本自我介绍
+1. 基本自我介绍
 
-### 实现一个两列固定，中间自适应有哪些方法
+2. 实现一个两列固定，中间自适应有哪些方法
 
-1. 定位方式
+3. canvas 知道它的一些方法吗
 
-    ```css
-    .left {
-      width: 200px;
-      height: 100%;
-      background-color: red;
-      position: absolute;
-      left: 0;
-    }
-    .right {
-      width: 200px;
-      height: 100%;
-      background-color: red;
-      position: absolute;
-      right: 0;
-    }
-    .main {
-      height: 100%;
-      background-color: green;
-      position: absolute;
-      left: 200px;
-      right: 200px;
-      margin: auto;
-    }
+4. 思考一个案例：我需要等三张图片都加载完毕之后再执行回调函数，可以怎么实现
 
-    <div class="div">
-      <div class="left"></div>
-      <div class="right"></div>
-      <div class="main"></div>
-    </div>
+    Promise.all()
+
+5. setTimeout 和 定时器哪一个先执行
+
+6. css 两种盒模型说一下，怎么切换盒模型
+
+    ```js
+    box-sizing: context-box; 这是W3C盒模型，width = content
+    box-sizing: border-box;  这是IE盒模型， width = border + padding + content
     ```
 
-2. flex 布局
+7. 清除浮动的方式，清除浮动的原理
 
-    ```css
-    html, body {
-      height: 100%;
-    }
-    .div {
-      height: 100%; /* 想要实现高度百分百必须让父元素都有高度 */
-      display: flex;
-    }
-    .left  {
-      flex: 0 0 200px;
-      order: 1; /* order定义显示的顺序 */
-      background-color: red;
-    }
-    .right{
-      flex: 0 0 200px;
-      order: 3;
-      background-color: red;
-    }
-    .main{
-      flex: auto;
-      order: 2;
-      background-color: green;
-    }
+8. CSS 实现隔行变色
 
-    <div class="div">
-      <div class="left"></div>
-      <div class="right"></div>
-      <div class="main"></div>
-    </div>
+9. 触发BFC的方式有哪些
+   - 根元素(\<html>)
+   - overflow 值不为 visible 的块元素
+   - 浮动元素（元素的 float 不是 none）
+   - 绝对定位元素（元素的 position 为 absolute 或 fixed）
+   - 行内块元素（元素的 display 为 inline-block）
+   - 弹性元素（display为 flex 或 inline-flex元素的直接子元素）
+   - 网格元素（display为 grid 或 inline-grid 元素的直接子元素）
+
+10. @font-face
+
+11. transform 有哪些属性
+
+12. css 动画，有没有做过动画
+
+13. requestanimationframe 有用过吗？知道是干嘛的吗
+
+    ```js
+    window.requestAnimationFrame() 告诉浏览器——你希望执行一个动画，并且要求浏览器在下次重绘之前调用指定的回调函数更新动画。该方法需要传入一个回调函数作为参数，该回调函数会在浏览器下一次重绘之前执行。
     ```
 
-3. 左右浮动布局，这种布局方式，必须先写浮动部分，最后再写中间部分，否则右浮动块会掉到下一行。
+14. 请求后端的方式
 
-    ```css
-    html, body{
-      height: 100%;
-    }
-    .div{
-      height: 100%;
-    }
-    .left {
-      float: left;
-      width: 200px;
-      height: 100%;
-      background-color: red;
-    }
-    .right {
-      float: right;
-      width: 200px;
-      height: 100%;
-      background-color: red;
-    }
-    .main{
-      height: 100%;
-      background-color: green;
-    }
+15. Ajax 的流程
 
-    <div class="div">
-      <div class="left"></div>
-      <div class="right"></div>
-      <div class="main"></div>
-    </div>
-    ```
+16. 那你知道哪些头字段
 
-### canvas 知道它的一些方法吗
+17. 服务器主动向客户端发送数据
 
-### 思考一个案例：我需要等三张图片都加载完毕之后再执行回调函数，可以怎么实现
+    websocket
 
-Promise.all()
+18. 移动端布局的实现方式
 
-### setTimeout 和 定时器哪一个先执行
+19. rem 原理
 
-### css 两种盒模型说一下，怎么切换盒模型
+20. vh vw 了解吗
 
-```js
-box-sizing: context-box; 这是W3C盒模型，width = content
-box-sizing: border-box;  这是IE盒模型， width = border + padding + content
-```
+21. vue 中如何获取原生的 DOM 结点
+    refs
+    ref
 
-### 清除浮动的方式，清除浮动的原理
+22. vuex 有用过吗
 
-### CSS 实现隔行变色
+23. NextTick 是干嘛用的
 
-### 触发BFC的方式有哪些
+24. 如何实现私有变量
 
-- 根元素(\<html>)
-- overflow 值不为 visible 的块元素
-- 浮动元素（元素的 float 不是 none）
-- 绝对定位元素（元素的 position 为 absolute 或 fixed）
-- 行内块元素（元素的 display 为 inline-block）
-- 弹性元素（display为 flex 或 inline-flex元素的直接子元素）
-- 网格元素（display为 grid 或 inline-grid 元素的直接子元素）
+25. ES6 知道哪些
 
-### @font-face
+26. 箭头函数跟普通函数的区别
 
-### transform 有哪些属性
+27. fill() 方法怎么用的
 
-### css 动画，有没有做过动画
+28. Array.from()方法 怎么用的
 
-### requestanimationframe 有用过吗？知道是干嘛的吗
+29. Proxy 是干嘛用的
 
-```js
-window.requestAnimationFrame() 告诉浏览器——你希望执行一个动画，并且要求浏览器在下次重绘之前调用指定的回调函数更新动画。该方法需要传入一个回调函数作为参数，该回调函数会在浏览器下一次重绘之前执行。
-```
+30. Object.defineProperty() 方法是干嘛的
 
-### 请求后端的方式
+31. 讲讲 git 的流程
 
-### Ajax 的流程
+32. webpack 有自己配置过吗？讲讲
 
-### 那你知道哪些头字段
+33. 听说过正则吗？出题：xiao-wang-xiao 变成 xiaoWangXiao
 
-### 服务器主动向客户端发送数据
+34. todo-list 实现思路
 
-websocket
+35. 数据结构了解吗？知道哪些排序方法
 
-### 移动端布局的实现方式
-
-### rem 原理
-
-### vh vw 了解吗
-
-### vue 中如何获取原生的 DOM 结点
-
-refs
-ref
-
-### vuex 有用过吗
-
-### NextTick 是干嘛用的
-
-### 如何实现私有变量
-
-### ES6 知道哪些
-
-### 箭头函数跟普通函数的区别
-
-### fill() 方法怎么用的
-
-### Array.from()方法 怎么用的
-
-### Proxy 是干嘛用的
-
-### Object.defineProperty() 方法是干嘛的
-
-### 讲讲 git 的流程
-
-### webpack 有自己配置过吗？讲讲
-
-### 听说过正则吗？出题：xiao-wang-xiao 变成 xiaoWangXiao
-
-### todo-list 实现思路
-
-### 数据结构了解吗？知道哪些排序方法
-
-### 冒泡和快排讲一下思路
+36. 冒泡和快排讲一下思路
 
 # 触宝 广告商业化 50-60人
 
 ## 一面 50min
 
-### 先来介绍一下
+1. 先来介绍一下
 
-### 讲讲项目
+2. 讲讲项目
 
-### 轮播图实现的原理
+3. 轮播图实现的原理
 
-### js基本数据类型
+4. js基本数据类型
 
-### null和undefined的区别
+5. null和undefined的区别
 
-### null == undefined 的值是什么，为什么
+6. null == undefined 的值是什么，为什么
 
-### new 操作符的过程
+7. new 操作符的过程
+8. call apply 的区别
+9. 讲一下闭包
 
-### call apply 的区别
+10. 闭包打印 1-9
 
-### 讲一下闭包
+11. splice、filter、join、split 用法
 
-### 闭包打印 1-9
+12. 数组转成字符串
 
-### splice、filter、join、split 用法
+13. 1000个button需要注册点击事件，怎么实现
 
-### 数组转成字符串
+14. 事件代理（委托）优缺点
 
-### 1000个button需要注册点击事件，怎么实现
+    优点：
+    1.可以大量节省内存占用，减少事件注册。比如ul上代理所有li的click事件就很不错。
+    2.可以实现当新增子对象时，无需再对其进行事件绑定，对于动态内容部分尤为合适
+    缺点：事件代理的常用应用应该仅限于上述需求，如果把所有事件都用事件代理，可能会出现事件误判。即本不该被触发的事件被绑定上了事件。
 
-### 事件代理（委托）优缺点
+15. 水平居中怎么实现
 
-优点：1.可以大量节省内存占用，减少事件注册。比如ul上代理所有li的click事件就很不错。
-2.可以实现当新增子对象时，无需再对其进行事件绑定，对于动态内容部分尤为合适
-缺点：事件代理的常用应用应该仅限于上述需求，如果把所有事件都用事件代理，可能会出现事件误判。即本不该被触发的事件被绑定上了事件。
+16. H5 C3 新特性
 
-### 水平居中怎么实现
+17. css不兼容的情况有了解吗，怎么解决
 
-### H5 C3 新特性
+    [浏览器兼容性问题解决方案~总结](https://juejin.im/post/59a3f2fe6fb9a0249471cbb4#heading-6)
+    浏览器 CSS 兼容前缀
 
-### css不兼容的情况有了解吗，怎么解决
+    ```css
+    -o-transform:rotate(7deg); // Opera
 
-[浏览器兼容性问题解决方案~总结](https://juejin.im/post/59a3f2fe6fb9a0249471cbb4#heading-6)
-浏览器 CSS 兼容前缀
+    -ms-transform:rotate(7deg); // IE
 
-```css
--o-transform:rotate(7deg); // Opera
+    -moz-transform:rotate(7deg); // Firefox
 
--ms-transform:rotate(7deg); // IE
+    -webkit-transform:rotate(7deg); // Chrome
 
--moz-transform:rotate(7deg); // Firefox
+    transform:rotate(7deg); // 统一标识语句
+    ```
 
--webkit-transform:rotate(7deg); // Chrome
+18. ES6 的东西知道哪些
 
-transform:rotate(7deg); // 统一标识语句
-```
+19. let const var的区别
 
-### ES6 的东西知道哪些
+20. 箭头函数与普通函数的区别
 
-### let const var的区别
+21. 手写一个数组去重
 
-### 箭头函数与普通函数的区别
+22. 排序算法，sort的用法解释一下
 
-### 手写一个数组去重
+23. 平时怎么学习前端，学了多久了，有实习经历吗
 
-### 排序算法，sort的用法解释一下
-
-### 平时怎么学习前端，学了多久了，有实习经历吗
-
-### 学习的过程中有自己做demo吗
+24. 学习的过程中有自己做demo吗
