--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -1,5 +1,3 @@
-[toc]
-
 ```js
 记录一下，这是2020年春招实习的面试复盘，渣硕双非，屡屡碰壁 😭😭😭 太心酸了
 
@@ -24,9 +22,28 @@
   远景智能 无消息
 ```
 
-# vivo 2020/04/09
+- [vivo 南京](#vivo-南京)
+  - [一面 2020/04/09](#一面-20200409)
+- [华为 CBG 软件部 南研所](#华为-cbg-软件部-南研所)
+  - [一面 2020/4/22](#一面-2020422)
+  - [二面 2020/5/13 40min](#二面-2020513-40min)
+- [美团 上海 到店](#美团-上海-到店)
+  - [美团一面 40min](#美团一面-40min)
+  - [二面 2020/5/12 45min](#二面-2020512-45min)
+- [网易雷火 杭州](#网易雷火-杭州)
+  - [一面 2020/5/11 45min](#一面-2020511-45min)
+  - [二面 2020/5/13 50min](#二面-2020513-50min)
+  - [三面 2020/5/18 50min](#三面-2020518-50min)
+  - [hr面 2020/5/20  30min](#hr面-2020520-30min)
+- [学而思 北京](#学而思-北京)
+  - [一面 学而思网校 2020/5/15 67min](#一面-学而思网校-2020515-67min)
+- [触宝 上海](#触宝-上海)
+  - [一面 50min](#一面-50min)
+  - [二面 45min](#二面-45min)
 
-## 一面
+# vivo 南京
+
+## 一面 2020/04/09
 
 1. css 盒模型
 
@@ -58,7 +75,7 @@
 
 15. 你有什么想问我的
 
-# 华为 消费者 BG 软件部
+# 华为 CBG 软件部 南研所
 
 ## 一面 2020/4/22
 
@@ -132,7 +149,7 @@
 
 10. 实习时间
 
-# 美团 到店事业群-平台技术部
+# 美团 上海 到店
 
 ## 美团一面 40min
 
@@ -323,7 +340,7 @@
 
 ---
 
-# 网易雷火
+# 网易雷火 杭州
 
 ## 一面 2020/5/11 45min
 
@@ -511,7 +528,7 @@
 
 15. 未来是打算呆在杭州
 
-# 学而思
+# 学而思 北京
 
 ## 一面 学而思网校 2020/5/15 67min
 
@@ -609,7 +626,7 @@
 
 36. 冒泡和快排讲一下思路
 
-# 触宝 广告商业化 50-60人
+# 触宝 上海
 
 ## 一面 50min
 
@@ -678,3 +695,104 @@
 23. 平时怎么学习前端，学了多久了，有实习经历吗
 
 24. 学习的过程中有自己做demo吗
+
+## 二面 45min
+
+1. 自我介绍
+
+2. 项目介绍
+
+3. 轮播图的实现原理
+
+4. 知道哪些数组的方法
+
+5. splice 和 slice 的区别
+
+6. 手撕代码
+
+   - 问题一： 实现数组 arr 根据 id 来排序
+
+    ```js
+    var arr = [
+      { id: 2, name: 'test', score: 50 },
+      { id: 3, name: 'test', score: 60 },
+      { id: 5, name: 'test1', score: 70 }
+    ]
+
+    function solution(arr){
+      return arr.sort((a,b) => a['id']-b['id'])
+    }
+    ```
+
+   - 问题二：将 name 值相等的 score 加起来，例如问题一的arr，返回 {test: 110, test1: 70}
+
+    ```js
+    var arr = [
+          { id: 2, name: 'test', age: 15, score: 60 },
+          { id: 2, name: 'test', age: 25, score: 60 },
+          { id: 3, name: 'test1', age: 25, score: 60 },
+          { id: 5, name: 'test2', age: 35, score: 60 }
+        ]
+
+    function solution(arr, attr) {
+      var obj = {}
+      for (let i = 0; i < arr.length; i++) {
+        var key = arr[i][attr]
+        if (!obj[key]) {
+          obj[key] = arr[i]['score']
+        } else {
+          obj[key] += arr[i]['score']
+        }
+      }
+      return obj
+    }
+    console.log(solution(arr, 'name')); // {test: 120, test1: 60, test2: 60}
+    ```
+
+   - 问题三：函数的第二个参数是个数组，比如
+    attr = ['id']  就是将id的相同的score相加
+    attr = ['id', 'name']  就是将id和name相同的score相加
+    attr = ['id', 'name', 'age']  就是将id、name和age都相同的score相加
+
+    ```js
+    // 此问关键在于确定一个唯一的key
+    var arr = [
+    { id: 2, name: 'test', age: 15, score: 60 },
+    { id: 2, name: 'test', age: 25, score: 60 },
+    { id: 3, name: 'test1', age: 25, score: 60 },
+    { id: 5, name: 'test2', age: 35, score: 60 }
+    ]
+
+    function solution(arr, attr) {
+      var obj = {}
+      var str = attr.join('_') // 2_test
+
+      for (let i = 0; i < arr.length; i++) {
+        var curr = arr[i];
+        var a = []
+        attr.forEach(ele => {
+          a.push(curr[ele])
+        })
+        var key = a.join('_')
+        if(obj[key]){
+          obj[key] += curr['score']
+        }else{
+          obj[key] = curr['score']
+        }
+      }
+      return obj
+    }
+    console.log(solution(arr, ['id', 'name'])); // {2_test: 120, 3_test1: 60, 5_test2: 60}
+    ```
+
+7. 浏览器缓存机制
+
+8. 这样禁止缓存
+
+9. 项目中有用到缓存吗
+
+10. 你对加班怎么看
+
+11. 实习时间
+
+12. 反问
