添加学而思二面

--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -41,6 +41,7 @@
     - [hr面 2020/5/20  30min](#hr面-2020520-30min)
   - [学而思 北京 学而思网校](#学而思-北京-学而思网校)
     - [一面 2020/5/15 67min](#一面-2020515-67min)
+    - [二面 2020/5/26 30min](#二面-2020526-30min)
   - [触宝 上海](#触宝-上海)
     - [一面 2020/5/19 50min](#一面-2020519-50min)
     - [二面 2020/5/21 45min](#二面-2020521-45min)
@@ -629,6 +630,19 @@
 35. 数据结构了解吗？知道哪些排序方法
 
 36. 冒泡和快排讲一下思路
+
+### 二面 2020/5/26 30min
+
+1. 项目介绍
+2. vue react 的区别
+3. 虚拟DOM  Diff算法
+4. JS DOM API 罗列几个
+5. 事件绑定的方法
+6. 数据结构 排序算法以及时间复杂
+7. 栈 队列 树 图 广度优先 深度优先 DP问了个遍
+8. 你觉得你最有成就感的事
+9. 为什么不走机器学习方向
+10. 矩阵论 你知道两个矩阵为什么相乘吗 你知道3D游戏里人物的旋转就是用的矩阵相乘
 
 ## 触宝 上海
 
