更新面试复盘.md

--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -3,26 +3,26 @@
 ```js
 记录一下，这是2020年春招实习的面试复盘，渣硕双非，屡屡碰壁 😭😭😭 太心酸了
 
-投的比较晚，4月初才开始投，失策失策啊，看到这儿的小伙伴一定要早投！早投！早投！
+投的比较晚，4月初才开始投，失策失策啊，看到这儿的小伙伴一定要早投！早投！早投！多投！多投！多投！
 
 投递记录如下：
 
   蘑菇街 简历挂
-  vivo 一面挂
-  美团 一面 二面挂
-  华为 一面 二面 泡池子
+  eBay外企 简历挂
   网易互娱 笔试挂
-  网易雷火 一面 二面 三面 HR面
   小米 无消息
   东方财富 无消息
-  eBay外企 简历挂
-  亚信科技 无消息
-  中科院空天院苏州研究院 一面
-  学而思（北京）一面 二面
-  触宝（上海） 一面 二面
   4399（广州） 无消息
+  亚信科技 无消息
   远景智能 无消息
   恒生电子 太晚 6.21才笔试
+  vivo 一面挂
+  中科院空天院苏州研究院 一面
+  美团 一面 二面挂
+  华为 一面 二面 泡池子
+  网易雷火 一面 二面 三面 HR面
+  学而思（北京）一面 二面 HR面
+  触宝（上海） 一面 二面 （已offer）
 ```
 
 - [面试复盘记录](#面试复盘记录)
@@ -38,10 +38,11 @@
     - [一面 2020/5/11 45min](#一面-2020511-45min)
     - [二面 2020/5/13 50min](#二面-2020513-50min)
     - [三面 2020/5/18 50min](#三面-2020518-50min)
-    - [hr面 2020/5/20  30min](#hr面-2020520-30min)
+    - [HR面 2020/5/20  30min](#hr面-2020520-30min)
   - [学而思 北京 学而思网校](#学而思-北京-学而思网校)
     - [一面 2020/5/15 67min](#一面-2020515-67min)
     - [二面 2020/5/26 30min](#二面-2020526-30min)
+    - [HR面 2020/5/27](#hr面-2020527)
   - [触宝 上海](#触宝-上海)
     - [一面 2020/5/19 50min](#一面-2020519-50min)
     - [二面 2020/5/21 45min](#二面-2020521-45min)
@@ -501,7 +502,7 @@
 
 13. 给你一项任务限期内完成，你会怎么安排
 
-### hr面 2020/5/20  30min
+### HR面 2020/5/20  30min
 
 1. 实习时间是什么样子的
 
@@ -643,6 +644,8 @@
 8. 你觉得你最有成就感的事
 9. 为什么不走机器学习方向
 10. 矩阵论 你知道两个矩阵为什么相乘吗 你知道3D游戏里人物的旋转就是用的矩阵相乘
+
+### HR面 2020/5/27
 
 ## 触宝 上海
 
