更新学而思hr面

--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -647,6 +647,16 @@
 
 ### HR面 2020/5/27
 
+1. 研究生是保研吗
+2. 家是南京的吗
+3. 挑一到两个你认为比较重要的经历或者故事讲讲
+4. 通过这个面试或者这个实习你想获得什么
+5. 你对好未来有了解吗或者你对在线教育这个行业有什么见解吗
+6. 在线教育这种形式在疫情期间被越来越多的人知道，你对在线教育的发展形式从做技术的角度来看，你认为有哪些机遇和挑战
+7. 你是希望走纯技术还是走综合路线（带团队）
+8. 毕业之后的发展规划
+9. 你还有在面其他公司的提前批吗
+
 ## 触宝 上海
 
 ### 一面 2020/5/19 50min
