更新学而思hr面

--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -42,7 +42,7 @@
   - [学而思 北京 学而思网校](#学而思-北京-学而思网校)
     - [一面 2020/5/15 67min](#一面-2020515-67min)
     - [二面 2020/5/26 30min](#二面-2020526-30min)
-    - [HR面 2020/5/27](#hr面-2020527)
+    - [HR面 2020/5/27 16min](#hr面-2020527-16min)
   - [触宝 上海](#触宝-上海)
     - [一面 2020/5/19 50min](#一面-2020519-50min)
     - [二面 2020/5/21 45min](#二面-2020521-45min)
@@ -645,7 +645,7 @@
 9. 为什么不走机器学习方向
 10. 矩阵论 你知道两个矩阵为什么相乘吗 你知道3D游戏里人物的旋转就是用的矩阵相乘
 
-### HR面 2020/5/27
+### HR面 2020/5/27 16min
 
 1. 研究生是保研吗
 2. 家是南京的吗
